  scan (Hu, Fomel, and Ying)
* sep/passive: Passive seismic imaging applied to synthetic data
  (Rickett and Claerbout)
* tccs/ortho: Random noise attenuation using local signal-and-noise
  orthogonalization (Chen and Fomel)
* tccs/strat: Stratigraphic coordinates, a coordinate system tailored
  to seismic interpretation (Karimi and Fomel)

To SCons:

* Added SLURM support for running MPI jobs through SCons
* Added usedatapath= in Fetch for placing downloaded data in DATAPATH by default
* Upgraded to scons-2.3.4
* Allow Fetch to run with top=None

To documentation:

To APIs:

To the Python package:

* sfbatch: script for submitting jobs to a cluster queue system 
* Changed MPIRUN from a command-line option to a configure option
* Updated sunrpc configuration for the current version of Cygwin on Windows
* vpannotate: interactive wrapper for annotations with sfbox

To programs:

* Added new color schemes (color= in sfgrey): lb (Light-Bartlein),
  gist_earth, spectral, seismic, owb (orange-white-black),  rwb
  (red-white-black), izoaz (isoluminant for azimuth data), 
  montag (spectral lightness rainbow) 
* sfipick: example Tkinter script for interactive picking
* sfvelan: interactive velocity picking using matplotlib
* Added x0= and mwt= parameters in sfconjgrad
* Added griddash= parameter to stdplot
* sflas2rsf: Convert LAS-2 well logs to RSF
* Added segy= and desc= parameters to sfheaderattr
* Renamed sfsvd sfpysvd and fixed sizes for output vectors
* Enabled depth= option for sfgraph with lines
* user/junyan: New contributor (Jun Yan)
* Added inv= flag in sfheaderwindow
* Added polyneg= flag in sfwiggle
* Added key= and nkey= parameters to sfheadermath
* sfcerf: complex error function
* color scheme can be specified by file name

===Bug fixes===

In the reproducible documents collection:

In documentation:

In APIs:

* Fixed __array_wrap__ bug in Python API
* Fixed bug in framenum with no label1 in stdplot

In the Python package:

In programs:
