@@ -99,7 +99,7 @@ int main(int argc, char* argv[])
 	    aps[i1] = 4.*db/ab + (1.+2./ab)*dr;
 	}
 
-	sf_int1_init (tpp, 0., dt, nt, sf_spline_int, nw, n1);
+	sf_int1_init (tpp, 0., dt, nt, sf_spline_int, nw, n1, 0.0);
 	sf_int1_lop (true,false,nt,n1,spline,app);
 	sf_spline_post(nw, 0, 1, nt, spline, trace);
 	sf_floatwrite(trace,nt,out);
@@ -107,7 +107,7 @@ int main(int argc, char* argv[])
 	sf_spline_post(nw, 0, 1, nt, spline, trace);
 	sf_floatwrite(trace,nt,out);
 
-	sf_int1_init (tps, 0., dt, nt, sf_spline_int, nw, n1);
+	sf_int1_init (tps, 0., dt, nt, sf_spline_int, nw, n1, 0.0);
 	sf_int1_lop (true,false,nt,n1,spline,aps);
 	sf_spline_post(nw, 0, 1, nt, spline, trace);
 	sf_floatwrite(trace,nt,out);
